# opendiscourse_project

./: .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5fac7d2696f0_add_download_states_table_for_tracking_.py  ecc1fda708e0_initial_schema_all_47_models.py  f2c3a4b5d6e7_enable_pgvector_extension_for_rag.py
docs/: PROJECT_PLAN.md  context.md  project_summary.md  schema.md
scripts/: dashboard.py  download_scheduler.py  initial_bulk_load.py  simple_dashboard.py
src/opendiscourse/: __init__.py  __main__.py  celery_app.py  config.py  database.py
src/opendiscourse/api/: main.py
src/opendiscourse/ingestion/: base.py  congress_gov.py  fec.py  govinfo.py
src/opendiscourse/models/: __init__.py  campaign_finance.py  congress.py  lobbying.py  metadata.py  stock_disclosures.py
src/opendiscourse/parsers/: csv_parser.py  json_parser.py  pdf_parser.py  xml_parser.py
src/opendiscourse/rag/: __init__.py  index.py  query.py
src/opendiscourse/utils/: download_manager.py  download_state.py  helpers.py  logging_config.py  rate_limiter.py
