[project]
name = "opendiscourse"
version = "0.1.0"
description = "Unified PostgreSQL database for US government data: legislation, voting, campaign finance, lobbying, and trading disclosures"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenDiscourse Contributors"}
]

dependencies = [
    # Database
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",

    # Task queue
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",

    # API
    "fastapi>=0.109,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",

    # HTTP client
    "httpx>=0.26,<1.0",

    # Data processing
    "polars>=0.20,<1.0",
    "pandas>=2.2,<3.0",

    # XML/JSON parsing
    "lxml>=5.0,<6.0",
    "xmltodict>=0.13,<1.0",

    # Web scraping
    "playwright>=1.40,<2.0",
    "beautifulsoup4>=4.12,<5.0",

    # PDF parsing
    "pdfplumber>=0.10,<1.0",
    "pypdf>=4.0,<5.0",

    # MCP Server & RAG
    "langchain>=0.1,<1.0",
    "langchain-mcp>=0.1.0",
    "llama-index>=0.10,<1.0",
    "llama-index-vector-stores-postgres>=0.1,<1.0",

    # Utilities
    "python-dotenv>=1.0,<2.0",
    "tenacity>=8.2,<9.0",
    "structlog>=24.1,<25.0",
    "orjson>=3.9,<4.0",
    "schedule>=1.2,<2.0",

    # HuggingFace datasets
    "datasets>=2.16,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<5.0",
    "ruff>=0.2,<1.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.6,<4.0",
    "ipykernel>=6.29,<7.0",
    "jupyter>=1.0,<2.0",
]

[project.scripts]
opendiscourse = "opendiscourse.cli:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
